--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -91,6 +91,7 @@ public class CustomerValidator implements Validator {
 `BeanWrapper`和其对应实现类`BeanWrapperImpl`是`org.springframework.beans`包的重要内容，提供了单独或批量获取/设置属性值、获取属性描述符、查询属性的可读/可写等功能。同时，`BeanWrapper`也支持内置属性的处理，允许设置任意深度的嵌套属性信息。  
 `BeanWrapper`支持添加标准JavaBean的`PropertyChangeListeners`和`VetoableChangeListeners`，而无需目标对象包含支持代码。`BeanWrapper`支持根据下标索引设置属性。  
 `BeanWrapper`一般不会在应用中直接使用，而是用于`DataBinder`和`BeanFactory`。  
+![BeanWrapperImpl体系结构](img/BeanWrapperImpl.png)
 
 ### 3.1 设置基本属性及嵌套属性
 `setPropertyValue`和`getPropertyValue`的各种重载方法用于设置/获取属性值。  
@@ -167,7 +168,12 @@ Float salary = (Float) company.getPropertyValue("managingDirector.salary");
 
 ### 3.2 内置PropertyEditor实现
 
+Spring通过`PropertyEditor`处理`Object`与`String`之间的转换。将对象类型转换为其他形式十分有用，比如`Date`表示为可读形式（`String`类型的`'2007-14-09'`），同时也可将可读形式转换回原始的日期类型。通过注册`java.beans.PropertyEditor`接口的自定义实现可实现上述功能。向`BeanWrapper`（或其他IoC容器）注册自定义编辑器可增强识别如何将属性转换为指定类型的能力。  
+Spring中大量使用了属性编辑功能，比如：  
++ 通过`PropertyEditor`实现类设置bean的属性。当XML文件中的bean属性设置为字符串时，Spring会尝试使用`ClassEditor`将值转换为`Class`对象（如果属性的setter方法参数为`Class`）。
++ 使用`PropertyEditor`的实现类转换Spring MVC框架的HTTP请求参数，以便手动将参数绑定到`CommandController`的各种子类。  
 
+Spring提供了一系列内置的`PropertyEditor`实现类，这些类都位于`org.springframework.beans.propertyeditors`包下。大多数的实现类都默认注册到了`BeanWrapperImpl`中。我们也可以通过某些方式注册自定义的属性编辑器来覆盖默认实现。
 
 
 
