--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -173,7 +173,164 @@ Spring中大量使用了属性编辑功能，比如：
 + 通过`PropertyEditor`实现类设置bean的属性。当XML文件中的bean属性设置为字符串时，Spring会尝试使用`ClassEditor`将值转换为`Class`对象（如果属性的setter方法参数为`Class`）。
 + 使用`PropertyEditor`的实现类转换Spring MVC框架的HTTP请求参数，以便手动将参数绑定到`CommandController`的各种子类。  
 
-Spring提供了一系列内置的`PropertyEditor`实现类，这些类都位于`org.springframework.beans.propertyeditors`包下。大多数的实现类都默认注册到了`BeanWrapperImpl`中。我们也可以通过某些方式注册自定义的属性编辑器来覆盖默认实现。
+Spring提供了一系列内置的`PropertyEditor`实现类，这些类都位于`org.springframework.beans.propertyeditors`包下。大多数的实现类都默认注册到了`BeanWrapperImpl`中。我们也可以通过某些方式注册自定义的属性编辑器来覆盖默认实现。内置的`PropertyEditor`包括：  
+| 类 | 描述 |
+| :-- | :-- |
+| `ByteArrayPropertyEditor` | 用于字节数组。将字符串转换为对应的字节表示。默认注册到`BeanWrapperImpl`。 |
+| `ClassEditor` | 将表示类的字符串转换为实际的类。如果类未找到则抛出`IllegalArgumentException`。默认注册到`BeanWrapperImpl`。 |
+| `CustomBooleanEditor` | 布尔类型的自定义属性编辑器。默认注册到`BeanWrapperImpl`，可以被注册的自定义编辑器覆盖。 |
+| `CustomCollectionEditor` | `Collection`类型的属性编辑器，将一种集合类转为指定集合类型。 |
+| `CustomDateEditor` | `java.util.Dat`类型的自定义属性编辑器，支持自定义的`DateFormat`。默认未注册，必须用户自定义正确的日期格式。 |
+| `CustomNumberEditor` | `Number`子类的自定义属性编辑器，比如`Integer`、`Long`、`Float`或`Double`。默认注册到`BeanWrapperImpl`，可通过注册自定义实例来覆盖。 |
+| `FileEditor` | 将字符串解析为`java.io.File`对象。默认注册到`BeanWrapperImpl`。 |
+| `InputStreamEditor` | 可以将字符串转换为`java.io.InputStream`对象的单向属性编辑器，主要通过`ResourceEditor`和`Resource`实现。默认不会自动关闭输入流。默认注册到`BeanWrapperImpl`。 | 
+| `LocaleEditor` | 将字符串转换为`Locale`对象。默认注册到`BeanWrapperImpl`。 |
+| `PatternEditor` | 将字符串解析为`java.util.regex.Pattern`对象。 |
+| `PropertiesEditor` | 将符合规范的字符串解析为`java.util.Properties`对象。默认注册到`BeanWrapperImpl`。 |
+| `StringTrimmerEditor` | 裁剪字符串。允许将空字符串转换为`null`值。默认未注册。 |
+| `URLEditor` | 将URL的字符串表示解析为实际的`URL`对象。默认注册到`BeanWrapperImpl`。 |
+
+Spring使用`java.beans.PropertyEditorManager`来设置查找所需属性编辑器的路径。查找路径包括`com.sun.bean.editors`，其中包括了`Font`、`Color`和绝大多数原始类型的`PropertyEditor`实现类。如果`PropertyEditor`位于其能处理类的相同包下且名称为类名称加`Editor`后缀，标准JavaBean体系会自动发现而不需要显式注册。比如下图结构足够识别`SomethingEditor`并作为`Something`类型属性的`PropertyEditor`实现类：  
+```java
+com
+  chank
+    pop
+      Something
+      SomethingEditor // the PropertyEditor for the Something class
+```
+
+我们同样可使用Java标准的`BeanInfo`机制来处理，下述使用`BeanInfo`机制注册一个或多个`PropertyEditor`实例来处理关联类的属性：  
+```java
+com
+  chank
+    pop
+      Something
+      SomethingBeanInfo // the BeanInfo for the Something class
+```
+下述Java源码展示了`SomethingBeanInfo`如何将`CustomNumberEditor`与`Something`的`age`属性相关联：  
+```java
+public class SomethingBeanInfo extends SimpleBeanInfo {
+
+    public PropertyDescriptor[] getPropertyDescriptors() {
+        try {
+            final PropertyEditor numberPE = new CustomNumberEditor(Integer.class, true);
+            PropertyDescriptor ageDescriptor = new PropertyDescriptor("age", Something.class) {
+                public PropertyEditor createPropertyEditor(Object bean) {
+                    return numberPE;
+                };
+            };
+            return new PropertyDescriptor[] { ageDescriptor };
+        }
+        catch (IntrospectionException ex) {
+            throw new Error(ex.toString());
+        }
+    }
+}
+```
+
+#### 注册自定义实现
+当通过字符串设置bean的属性时，Spring的IoC容器底层会借助`PropertyEditor`实现类将字符串转换成对应属性的复合数据类型。Spring预注册了一系列自定义`PropertyEditor`实现类。同时依照Java的标准`PropertyEditor`查找机制将对应类的`PropertyEditor`正确地命名并放置在该类的同一个包下来实现自动发现注册。  
+此外，Spring提供了一些机制用于注册其他自定义`PropertyEditor`。最繁琐的方式（并不推荐使用）是存在`BeanFactory`引用时调用`ConfigurableBeanFactory`的`registerCustomEditor()`方法。另一个（稍微方便的）方式是使用`CustomEditorConfigurer`类型的`BeanFactoryPostProcessor`。尽管可以通过`BeanFactoryPostProcessor`获取`BeanFactory`实现类使用，`CustomEditorConfigurer`同样包含了一个内置`BeanFactory`属性，我们仍强烈推荐通过`ApplicationContext`使用`PropertyEditor`，类似其他bean一样可以部署和自动检测、应用。  
+`BeanFactory`和`ApplicationContext`会自动使用一系列内置的`PropertyEditor`，`BeanWrapper`借助他们处理属性转换。此外，`ApplicationContexts`根据自身特性会覆盖或新增实现资源查找的`PropertyEditor`。  
+
+通过`CustomEditorConfigurer`注册自定义`PropertyEditor`示例如下：  
+```xml
+<bean class="org.springframework.beans.factory.config.CustomEditorConfigurer">
+    <property name="customEditors">
+        <map>
+            <entry key="example.ExoticType" value="example.ExoticTypeEditor"/>
+        </map>
+    </property>
+</bean>
+```
+Spring容器中注册`PropertyEditor`的机制是创建和使用`PropertyEditorRegistrar`。这个接口适用于不同场景下使用同一系列`PropertyEditor`，设计一套的`PropertyEditorRegistrar`并在各种场景中复用。`PropertyEditorRegistrar`实例协同`PropertyEditorRegistry`接口（Spring的`BeanWrapper`和`DataBinder`实现了该接口）使用。`CustomEditorConfigurer`提供了`setPropertyEditorRegistrars(..)`允许方便地设置`PropertyEditorRegistrar`属性，这种方式很容易在`DataBinder`和`Controller`中利用`PropertyEditorRegistrar`。而且，这种方式避免了自定义属性编辑器的同步需求：`PropertyEditorRegistrar`应为每一次bean创建使用全新的`PropertyEditor`实例。  
+创建自定义的`PropertyEditorRegistrar`示例如下：  
+```java
+package com.foo.editors.spring;
+
+public final class CustomPropertyEditorRegistrar implements PropertyEditorRegistrar {
+
+    public void registerCustomEditors(PropertyEditorRegistry registry) {
+
+        // it is expected that new PropertyEditor instances are created
+        registry.registerCustomEditor(ExoticType.class, new ExoticTypeEditor());
+
+        // you could register as many custom property editors as are required here...
+    }
+}
+```
+作为`PropertyEditorRegitstrar`的实现示例，参照`org.springframework.beans.support.ResourceEditorRegistrar`。在实现`registerCustomEditors(..)`方法时，它会为每一个属性编辑器创建一个新的实例。  
+配置`CustomEditorConfigurer`并注入`CustomPropertyEditorRegistrar`实例的方法如下：  
+```xml
+<bean class="org.springframework.beans.factory.config.CustomEditorConfigurer">
+    <property name="propertyEditorRegistrars">
+        <list>
+            <ref bean="customPropertyEditorRegistrar"/>
+        </list>
+    </property>
+</bean>
+
+<bean id="customPropertyEditorRegistrar"
+    class="com.foo.editors.spring.CustomPropertyEditorRegistrar"/>
+```
+联合使用`PropertyEditorRegistrars`与处理数据绑定的`Controllers`(比如`SimpleFormController`)非常简单。比如我们可以通过`initBinder(..)`的实现方法使用`PropertyEditorRegistrar`：  
+```java
+public final class RegisterUserController extends SimpleFormController {
+
+    private final PropertyEditorRegistrar customPropertyEditorRegistrar;
+
+    public RegisterUserController(PropertyEditorRegistrar propertyEditorRegistrar) {
+        this.customPropertyEditorRegistrar = propertyEditorRegistrar;
+    }
+
+    protected void initBinder(HttpServletRequest request,
+            ServletRequestDataBinder binder) throws Exception {
+        this.customPropertyEditorRegistrar.registerCustomEditors(binder);
+    }
+
+    // other methods to do with registering a User
+}
+```
+上述注册`PropertyEditor`的方式代码简单，可将注册过程封装在一个类中并在所有需要相关属性编辑器的`Controller`共享。  
+
+## 四、Spring的类型转换
+Spring从3.0开始提供了`core.convert`包用于通用类型转换体系，这套体系定义了实现类型转换逻辑的SPI和在运行时执行类型转换的API。Spring容器可以借助这套体系代替`PropertyEditor`实现类来将外部的字符串属性值转换为必须的属性类型。同时公共API可在应用中任何需要类型转换时使用。  
+### 4.1 Converter SPI
+实现类型转换逻辑的SPI很简单，且是强类型的，如下：  
+```java
+package org.springframework.core.convert.converter;
+
+public interface Converter<S, T> {
+
+    T convert(S source);
+}
+```
+实现自定义转换器只需要继承`Converter`接口，将`S`和`T`参数化为想要转换的原始数据类型和目标数据类型。如果已经注册了集合或数组的类型转换器(`DefaultConversionService`的默认行为)，这个转换器同时可用于`S`集合（或数组）转换为`T`集合（或数组）。   
+调用`convert(S)`方法时应保证原始参数不能为`null`。`Converter`在转换失败时可以抛出任何未检查异常。尤其是抛出`IllegalArgumentException`来表示无效的原始参数。注意需要确保`Converter`实现是**线程安全**的。
+`core.convert.support`包提供了一些`Converter`实现以便使用。其中包括将字符串转换为数字或其他通用数据类型。`StringToInteger`类
+```java
+package org.springframework.core.convert.support;
+
+final class StringToInteger implements Converter<String, Integer> {
+
+    public Integer convert(String source) {
+        return Integer.valueOf(source);
+    }
+}
+```
+
+### 4.2 使用ConverterFactory
+
+
+
+
+
+
+
+
+
+
+
 
 
 
