--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -320,15 +320,114 @@ final class StringToInteger implements Converter<String, Integer> {
 ```
 
 ### 4.2 使用ConverterFactory
+如果需要为一整套类体系创建集中的转换逻辑（比如将`String`转换为`Enum`类型），可以通过实现`ConverterFactory`接口来实现：  
+```java
+package org.springframework.core.convert.converter;
+
+public interface ConverterFactory<S, R> {
+
+    <T extends R> Converter<S, T> getConverter(Class<T> targetType);
+}
+```
+`S`是转换前的类型，`R`是转换后的一系列类型的基类。然后实现`getConverter(Class<T>)`方法，其中`T`是`R`的子类。如下示例：  
+```java
+package org.springframework.core.convert.support;
+
+final class StringToEnumConverterFactory implements ConverterFactory<String, Enum> {
+
+    public <T extends Enum> Converter<String, T> getConverter(Class<T> targetType) {
+        return new StringToEnumConverter(targetType);
+    }
+
+    private final class StringToEnumConverter<T extends Enum> implements Converter<String, T> {
+
+        private Class<T> enumType;
+
+        public StringToEnumConverter(Class<T> enumType) {
+            this.enumType = enumType;
+        }
+
+        public T convert(String source) {
+            return (T) Enum.valueOf(this.enumType, source.trim());
+        }
+    }
+}
+```
+
+### 4.3 使用GenericConverter
+尝试使用`GenericConverter`接口来代替一个复杂的`Converter`实现。相比于`Converter`接口，`GenericConverter`接口更加灵活同时也失去了强类型的限制，也支持多种源类型和目标类型之间的转换。此外，`GenericConverter`在类型转换时提供了更多可使用的源和目标域相关信息。这些信息使得我们可以通过域注释或域签名的声明信息驱动类型转换。`GenericConverter`接口的定义如下：  
+```java
+package org.springframework.core.convert.converter;
+
+public interface GenericConverter {
+
+    public Set<ConvertiblePair> getConvertibleTypes();
+
+    Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType);
+}
+```
+实现`GenericConverter`接口需要通过`getConvertibleTypes()`方法返回支持的源和目标类型对。之后在`convert(Object, TypeDescriptor, TypeDescriptor)`方法中包含对应的转换逻辑。源`TypeDescriptor`和目标`TypeDescriptor`可以用于访问待转换值的源属性域及待设置值的目标域。  
+`GenericConverter`的一个很好的实现是用于转换java数组和集合的`ArrayToCollectionConverter`，它检查了集合类型的目标域并解析集合元素的类型。这种方式将源数组中的每个元素转换为目标集合元素类型，然后将集合设置到目标域。  
+
+> `GenericConverter`是一个相当复杂的转换SPI，应该仅在需要时使用。更多地使用`Converter`和`ConverterFactory`接口。  
+
+#### 使用ConditionalGenericConverter
+在有些场景下，仅当指定条件满足时`Converter`才可以运行。比如，当指定注解在目标域上存在或目标类定义了指定方法（比如`static valueOf()`方法）时，才能执行`Converter`。`ConditionalGenericConverter`接口是`GenericConverter`和`ConditionalConverter`的整合，可用于自定义匹配规则：  
+```java
+public interface ConditionalConverter {
+
+    boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType);
+}
+
+public interface ConditionalGenericConverter extends GenericConverter, ConditionalConverter {
+}
+```
+`ConditionalGenericConverter`的示例可参考`IdToEntityConverter`，它负责转换持久化实体标识符和实体引用。这个转换器仅在目标实体类型定义了静态查找方法（比如`findAccount(Long)`）才会匹配成功。  
 
 
+### 4.4 ConversionService
+`ConversionService`定义了一个在运行时执行类型转换逻辑的统一接口。`Converter`接口通常都在该门面后执行：  
+```java
+package org.springframework.core.convert;
 
+public interface ConversionService {
 
+    boolean canConvert(Class<?> sourceType, Class<?> targetType);
 
+    <T> T convert(Object source, Class<T> targetType);
 
+    boolean canConvert(TypeDescriptor sourceType, TypeDescriptor targetType);
 
+    Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType);
 
+}
+```
 
+`ConversionService`的实现类大多数也会实现`ConverterRegistry`接口，这个接口提供了注册转换器的SPI。`ConversionService`内部会委托注册的转换器执行类型转换逻辑。  
+`core.convert.support`包提供了一个健壮的`ConversionService`实现类。`GenericConversionService`是适应于绝大多数环境的通用实现，`ConversionServiceFactory`是创建常用的`ConversionService`配置的一个非常方便的工厂。
+
+### 4.5 配置ConversionService
+`ConversionService`是无状态对象，设计为在应用启动时实例化并在多个线程间共享。在Spring应用中，我们会为每个Spring容器（或`ApplicationContext`）配置一个`ConversionService`实例。Spring会选择这个`ConversionService`并在框架内需要类型转换时使用它。我们也可以将`ConversionService`注入到自己的bean中并显式地调用它。  
+
+> 如果Spring中未注册`ConversionService`时，基于`PropertyEditor`的系统会执行。  
+
+Spring中注册方法为：  
+```xml
+<bean id="conversionService"
+    class="org.springframework.context.support.ConversionServiceFactoryBean"/>
+```
+
+默认的`ConversionService`提供了在字符串、数字、枚举、集合、映射和其他常用类型的转换。如果需要用自定义转换器扩容或覆盖默认转换器，设置`converters`属性。属性值可以实现`Converter`, `ConverterFactory`或`GenericConverter`接口中的任意一个：  
+```xml
+<bean id="conversionService"
+        class="org.springframework.context.support.ConversionServiceFactoryBean">
+    <property name="converters">
+        <set>
+            <bean class="example.MyCustomConverter"/>
+        </set>
+    </property>
+</bean>
+```
 
 
 
