--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -87,7 +87,7 @@ public class CustomerValidator implements Validator {
 数据绑定和验证可以同时使用。比如当需要通过`MessageSource`处理错误信息输出，可以在拒绝某个字段时可以使用错误码。无论间接或直接调用`Errors`接口的`rejectValue`或其他`reject`方法时，底层实现除了注册传入的错误码，还会注册一系列附加错误码。`MessageCodesResolver`决定了`Errors`接口会注册哪些错误码。默认使用的`DefaultMessageCodesResolver`不仅仅会注册提供的错误码，同时会注册带有字段名称的错误码，比如通过`rejectValue("age", "too.darn.old")`方法拒绝了一个字段，除了`too.darn.old`错误码外还会注册`too.darn.old.age`和`too.darn.old.int`。这种做法可以帮助开发人员找到对应的错误信息。  
 
 ## 三、BeanWrapper
-`org.springframework.beans`包遵循JavaBean标准。JavaBean定义为默认构造器为无参构造器的类，且属性值有对应的`get/set`方法。
+`org.springframework.beans`包遵循JavaBean标准。JavaBean定义为默认无参构造器的类，且属性值有对应的`get/set`方法。
 `BeanWrapper`和其对应实现类`BeanWrapperImpl`是`org.springframework.beans`包的重要内容，提供了单独或批量获取/设置属性值、获取属性描述符、查询属性的可读/可写等功能。同时，`BeanWrapper`也支持内置属性的处理，允许设置任意深度的嵌套属性信息。  
 `BeanWrapper`支持添加标准JavaBean的`PropertyChangeListeners`和`VetoableChangeListeners`，而无需目标对象包含支持代码。`BeanWrapper`支持根据下标索引设置属性。  
 `BeanWrapper`一般不会在应用中直接使用，而是用于`DataBinder`和`BeanFactory`。  
@@ -428,7 +428,34 @@ Spring中注册方法为：
     </property>
 </bean>
 ```
+在SpringMVC应用中经常用到`ConversionService`接口。在有些场景下，我们会在转换过程中进行格式化，这会用到之后讲到的`FormattingConversionServiceFactoryBean`。  
 
+### 4.6 编程式使用ConversionService
+编程式使用`ConversionService`实例只需跟其他bean一样做注入即可：  
+```java
+@Service
+public class MyService {
+
+    public MyService(ConversionService conversionService) {
+        this.conversionService = conversionService;
+    }
+
+    public void doIt() {
+        this.conversionService.convert(...)
+    }
+}
+```
+参数为`targetType`的`convert`方法能够满足大多数场景的使用要求，但无法满足更加复杂类型的处理（比如参数化集合）。比如，当我们想将`List<Integer>`转换为`List<String>`时，需要提供源类型及目标类型的更正规的定义。  
+幸运的是，`TypeDescriptor`提供了多种选择来解决这个问题，比如：  
+```java
+DefaultConversionService cs = new DefaultConversionService();
+
+List<Integer> input = ...
+cs.convert(input,
+    TypeDescriptor.forObject(input), // List<Integer> type descriptor
+    TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(String.class)));
+```
+`DefaultConversionService`自动注册了适用大多数场景的转换器，包括集合类转换器、纯量转换器、对象转字符串转换器等等。我们可以通过`DefaultConversionService`类定义的`addDefaultConverters`静态方法向任意的`ConverterRegistry`注册相同的转换器。  
 
 
 
