--- a/Nginx/001.Installing nginx.md
+++ b/Nginx/001.Installing nginx.md
@@ -2,12 +2,12 @@
 
 nginx can be installed differently, depending on the operating system.
 基于操作系统，nginx有多种安装方式
-##Linux系统上的安装 （Installation on Linux） ##
+## Linux系统上的安装 （Installation on Linux）
 
 For Linux, nginx [packages](http://nginx.org/en/linux_packages.html) from nginx.org can be used.
 对于Linux系统，可以使用nginx.org里的[nginx安装包](http://nginx.org/en/linux_packages.html)。
 
-##FreeBSD系统上的安装 （Installation on FreeBSD） ##
+## FreeBSD系统上的安装 （Installation on FreeBSD）
 
 On FreeBSD, nginx can be installed either from the [packages](https://www.freebsd.org/doc/handbook/pkgng-intro.html) or through the [ports](https://www.freebsd.org/doc/handbook/ports-using.html) system. The ports system provides greater flexibility, allowing selection among a wide range of options. The port will compile nginx with the specified options and install it.
 在FreeBSD系统中，nginx可以通过安装包或端口系统进行安装。端口系统（port system）更加灵活，具有很大的选择性。port会使用特定的选则对nginx进行编译并将其进行安装。
