Update 002.building nginx from source.md

--- a/Nginx/002.building nginx from source.md
+++ b/Nginx/002.building nginx from source.md
@@ -14,13 +14,13 @@ prints a help message.
 
 打印help信息
 
-    --prefix=`*path*`
+    --prefix=path
 
 defines a directory that will keep server files. This same directory will also be used for all relative paths set by `configure` (except for paths to libraries sources) and in the `nginx.conf` configuration file. It is set to the `/usr/local/nginx` directory by default.
 
 定义一个保存服务器文件的地址目录。该目录也会用在所有通过`configure`设置的的相关路径中（除了通向源代码库（libraries sources）的路径）以及在 `nginx.conf`配置文件中的路径。默认是设置到目录`/usr/local/nginx` 下。
 
-`--sbin-path=*path*`
+`--sbin-path=path`
 
 sets the name of an nginx executable file. This name is used only during installation. By default the file is named `*prefix*/sbin/nginx`.
 
@@ -32,29 +32,29 @@ defines a directory where nginx dynamic modules will be installed. By default th
 
 定义一个nginx动态模的安装目录。默认使用`*prefix*/modules`目录。
 
-    --conf-path=*path*
+    --conf-path=path
 
 sets the name of an `nginx.conf `configuration file. If needs be, nginx can always be started with a different configuration file, by specifying it in the command-line parameter `-c *file*`. By default the file is named `prefix/conf/nginx.conf`.
 
 设置`nginx.conf `配置文件的name。如果需要，通过在将该命令行参数指定为`-c *file*`，nginx可以总是以不同的配置文件启动。默认该文件命名为：`*prefix*/conf/nginx.conf`。
 
-    --error-log-path=*path*
+    --error-log-path=path
 
 sets the name of the primary error, warnings, and diagnostic file. After installation, the file name can always be changed in the `nginx.conf` configuration file using the [error_log](http://nginx.org/en/docs/ngx_core_module.html#error_log) directive. By default the file is named `prefix/logs/error.log`.
 
 设置原始错误、警告以及诊断文件的文件名。安装后，文件名可以在`nginx.conf`配置文件中使用[error_log](http://nginx.org/en/docs/ngx_core_module.html#error_log)指令来进行改变。
  
-    --pid-path=*path*
+    --pid-path=path
 
 sets the name of an `nginx.pid` file that will store the process ID of the main process. After installation, the file name can always be changed in the `nginx.conf` configuration file using the [pid](http://nginx.org/en/docs/ngx_core_module.html#pid) directive. By default the file is named `*prefix*/logs/nginx.pid`.
 
 设置`nginx.pid`文件名，该文件用于存储主程序的process ID。安装后，文件名可以在`nginx.conf` 配置文件中使用[pid](http://nginx.org/en/docs/ngx_core_module.html#pid) 指令进行更改。默认文件名为`*prefix*/logs/nginx.pid`。
 
-    --lock-path=*path*
+    --lock-path=path
 
 sets a prefix for the names of lock files. After installation, the value can always be changed in the `nginx.conf` configuration file using the [lock_file](http://nginx.org/en/docs/ngx_core_module.html#lock_file) directive. By default the value is `*prefix*/logs/nginx.lock`.
 
-为lock文件名添加前缀。安装后，可以在`nginx.conf`配置文件中使用[lock_file](http://nginx.org/en/docs/ngx_core_module.html#lock_file) 指令进行更改。默认值为`*prefix*/logs/nginx.lock`。
+为lock文件名添加前缀。安装后，可以在`nginx.conf`配置文件中使用[lock_file](http://nginx.org/en/docs/ngx_core_module.html#lock_file) 指令进行更改。默认值为`prefix/logs/nginx.lock`。
 
     --user=*name*
 sets the name of an unprivileged user whose credentials will be used by worker processes. After installation, the name can always be changed in the `nginx.conf` configuration file using the [user](http://nginx.org/en/docs/ngx_core_module.html#user) directive. The default user name is nobody.
@@ -66,13 +66,13 @@ sets the name of a group whose credentials will be used by worker processes. Aft
 
 为证书用于工作进程的群命名。安装后，可以在`nginx.conf`配置文件中使用[user](http://nginx.org/en/docs/ngx_core_module.html#user) 指令进行更改。默认群名称为普通用户的name。
 
-    --build=*name*
+    --build=name
 
 sets an optional nginx build name.
 
 设置一个可选择的nginx编译器名。
 
-    --builddir=*path*
+    --builddir=path
 
 sets a build directory.
 
