--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -457,6 +457,173 @@ cs.convert(input,
 ```
 `DefaultConversionService`自动注册了适用大多数场景的转换器，包括集合类转换器、纯量转换器、对象转字符串转换器等等。我们可以通过`DefaultConversionService`类定义的`addDefaultConverters`静态方法向任意的`ConverterRegistry`注册相同的转换器。  
 
+## 五、Spring的字段格式化
+`core.converter`是一个通用的类型转换系统，提供了`ConversionService`的API及强类型的`Converter`SPI来实现类型到类型的转换逻辑。Spring容器使用它来绑定属性值；此外，SPEL和`DataBinder`用来绑定字段值。例如，为了完成`expression.setValue(Object bean, Object value)`的尝试，SPEL可以通过`core.converter`系统来处理类型`String`到`Long`的强制转换。  
+考虑在网页或桌面应用中的类型转换需求：从`String`转换为后台处理程序需要的类型，或转换为`String`支持视图界面的展示。此外，我们经常会需要本地化`String`值。`core.converter`的`Converter`SPI更加通用，但无法直接解决这种格式化要求。为了直接解决这些问题，Spring3引入了更加便利的`Formatter`SPI，它提供了一种适用于客户端环境的更简单、更强壮的`PropertyEditor`替代方案。  
+一般地，`Converter`SPI用于实现通用类型转换逻辑的场景，`Formatter`SPI用于客户端环境和转换/打印字段值。`ConversionService`为两者提供了统一的类型转换API。  
+
+### 5.1 Formatter SPI
+
+实现字段格式化逻辑的`Formatter`SPI非常简单，且是强类型的。接口定义如下：  
+```java
+package org.springframework.format;
+
+public interface Formatter<T> extends Printer<T>, Parser<T> {
+}
+
+public interface Printer<T> {
+
+    String print(T fieldValue, Locale locale);
+}
+
+import java.text.ParseException;
+
+public interface Parser<T> {
+
+    T parse(String clientValue, Locale locale) throws ParseException;
+}
+```
+创建自定义`Formatter`，仅需简单地实现`Formatter`接口。`T`参数化为待格式化的对象类型（比如`java.util.Date`）。`print()`操作用于客户端本地化形式展示`T`实例，`parse()`操作将客户端本地化的格式化形式转换为`T`实例。如果尝试格式化失败时，自定义`Formatter`应该抛出`ParseException`或`IllegalArgumentException`异常。确保自定义`Formatter`是线程安全的。  
+`format`子包提供了一些便于使用的`Formatter`实现。`number`包提供了`NumberStyleFormatter`、`CurrencyStyleFormatter`和`PercentStyleFormatter`来通过`java.text.NumberFormat`格式化`Number`对象。`datetime`包提供了`DateFormatter`来通过`java.text.DateFormat`格式化`java.util.Date`对象。`datetime.joda`包提供了基于`Joda-Time`库的全方位日期格式支持。  
+`DateFormatter`实现`Formatter`接口如下：  
+```java
+package org.springframework.format.datetime;
+
+public final class DateFormatter implements Formatter<Date> {
+
+    private String pattern;
+
+    public DateFormatter(String pattern) {
+        this.pattern = pattern;
+    }
+
+    public String print(Date date, Locale locale) {
+        if (date == null) {
+            return "";
+        }
+        return getDateFormat(locale).format(date);
+    }
+
+    public Date parse(String formatted, Locale locale) throws ParseException {
+        if (formatted.length() == 0) {
+            return null;
+        }
+        return getDateFormat(locale).parse(formatted);
+    }
+
+    protected DateFormat getDateFormat(Locale locale) {
+        DateFormat dateFormat = new SimpleDateFormat(this.pattern, locale);
+        dateFormat.setLenient(false);
+        return dateFormat;
+    }
+}
+```
+### 5.2 注释驱动格式化
+字段格式化可通过字段类型或注释来配置。通过实现`AnnotationFormatterFactory`接口可将注释与`Formatter`进行绑定。`AnnotationFormatterFactory`接口定义如下：  
+```java
+package org.springframework.format;
+
+public interface AnnotationFormatterFactory<A extends Annotation> {
+
+    Set<Class<?>> getFieldTypes();
+
+    Printer<?> getPrinter(A annotation, Class<?> fieldType);
+
+    Parser<?> getParser(A annotation, Class<?> fieldType);
+}
+```
+创建实现的方式为：  
+1. 参数化A为关联格式化逻辑的字段注释`annotationType`，比如：`org.springframework.format.annotation.DateTimeFormat`；
+2. `getFieldTypes()`方法返回注释适用于的字段类型；
+3. `getPrinter()`方法返回用于打印被注释字段值的`Printer`；
+4. `getParser()`方法返回格式化被注释字段的`clientValue`的`Parser`。
+
+绑定`@NumberFormat`注释到指定风格样式数值字段的`Formatter`的示例如下：  
+```java
+public final class NumberFormatAnnotationFormatterFactory
+        implements AnnotationFormatterFactory<NumberFormat> {
+
+    public Set<Class<?>> getFieldTypes() {
+        return new HashSet<Class<?>>(asList(new Class<?>[] {
+            Short.class, Integer.class, Long.class, Float.class,
+            Double.class, BigDecimal.class, BigInteger.class }));
+    }
+
+    public Printer<Number> getPrinter(NumberFormat annotation, Class<?> fieldType) {
+        return configureFormatterFrom(annotation, fieldType);
+    }
+
+    public Parser<Number> getParser(NumberFormat annotation, Class<?> fieldType) {
+        return configureFormatterFrom(annotation, fieldType);
+    }
+
+    private Formatter<Number> configureFormatterFrom(NumberFormat annotation, Class<?> fieldType) {
+        if (!annotation.pattern().isEmpty()) {
+            return new NumberStyleFormatter(annotation.pattern());
+        } else {
+            Style style = annotation.style();
+            if (style == Style.PERCENT) {
+                return new PercentStyleFormatter();
+            } else if (style == Style.CURRENCY) {
+                return new CurrencyStyleFormatter();
+            } else {
+                return new NumberStyleFormatter();
+            }
+        }
+    }
+}
+```
+之后我们可以通过在字段上添加注释`@NumberFormat`来触发格式化：  
+```java
+public class MyModel {
+
+    @NumberFormat(style=Style.CURRENCY)
+    private BigDecimal decimal;
+}
+```
+`org.springframework.format.annotation`包下提供了一些可用的格式化注释API。`@NumberFormat`可用来实现`Number`类型字段的格式化（比如：`Double`和`Long`）；`@DateTimeFormat`用于格式化`java.util.Date`、`java.util.Calendar`、`Long`和基于JSR-310的`java.time`，甚至包括 Joda-Time值类型。  
+通过`@DateTimeFormat`格式化`java.util.Date`类型为ISO日期格式`yyyy-MM-dd`示例如下：  
+```java
+public class MyModel {
+
+    @DateTimeFormat(iso=ISO.DATE)
+    private Date date;
+}
+```
+
+### 5.3 FormatterRegistry
+`FormatterRegistry`SPI用于注册`Formatter`和`Converter`。`FormattingConversionService`是一个适用于大多数环境的`FormatterRegistry`实现，可通过编程式或声明式配置为Spring的bean实例，比如通过`FormattingConversionServiceFactoryBean`。这个实现同时也实现了`ConversionService`接口，可直接配置用于Spring的`DataBinder`及SpEL。  
+`FormatterRegistry`的接口定义如下：  
+```java
+package org.springframework.format;
+
+public interface FormatterRegistry extends ConverterRegistry {
+
+    void addFormatterForFieldType(Class<?> fieldType, Printer<?> printer, Parser<?> parser);
+
+    void addFormatterForFieldType(Class<?> fieldType, Formatter<?> formatter);
+
+    void addFormatterForFieldType(Formatter<?> formatter);
+
+    void addFormatterForAnnotation(AnnotationFormatterFactory<?> factory);
+}
+```
+`FormatterRegistry`集中化地配置格式化规则，而无需分散在`Controller`中。比如，期望所有的日期字段按特定方式格式化或注释的字段按指定方式格式化。通过共享的`FormatterRegistry`，这个规则仅需定义一次并应用于所有格式化需求。  
+
+### 5.4 FormatterRegistrar
+`FormatterRegistrar`用于通过`FormatterRegistry`注册`Formatter`和`Converter`，定义如下：  
+```java
+package org.springframework.format;
+
+public interface FormatterRegistrar {
+
+    void registerFormatters(FormatterRegistry registry);
+}
+```
+`FormatterRegistrar`有益于配置的同一个格式化策略中的多个相关联`Converter`和`Formatter`，比如日期格式化。且当声明式注册无法满足要求时也非常有用。
+
+
+
 
 
 
