--- a/Spring/SpringFramework/03.Validation.md
+++ b/Spring/SpringFramework/03.Validation.md
@@ -622,6 +622,202 @@ public interface FormatterRegistrar {
 ```
 `FormatterRegistrar`有益于配置的同一个格式化策略中的多个相关联`Converter`和`Formatter`，比如日期格式化。且当声明式注册无法满足要求时也非常有用。
 
+## 六、配置全局日期和时间格式
+
+默认地，未添加`@DateTimeFormat`注解的日期和时间字段会使用`DateFormat.SHORT`样式转换字符串。我们也可按照自己的喜好修改为自定义的全局格式化样式。  
+首先确保Spring没有配置默认的格式转换器。然后通过下述类手动配置格式转换器：  
++ `org.springframework.format.datetime.standard.DateTimeFormatterRegistrar`
++ `org.springframework.format.datetime.DateFormatterRegistrar`
++ `org.springframework.format.datetime.joda.JodaTimeFormatterRegistrar`
+
+比如我们可以通过如下示例修改全局格式化样式为`yyyyMMdd`:  
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public FormattingConversionService conversionService() {
+
+        // Use the DefaultFormattingConversionService but do not register defaults
+        DefaultFormattingConversionService conversionService = new DefaultFormattingConversionService(false);
+
+        // Ensure @NumberFormat is still supported
+        conversionService.addFormatterForFieldAnnotation(new NumberFormatAnnotationFormatterFactory());
+
+        // Register JSR-310 date conversion with a specific global format
+        DateTimeFormatterRegistrar registrar = new DateTimeFormatterRegistrar();
+        registrar.setDateFormatter(DateTimeFormatter.ofPattern("yyyyMMdd"));
+        registrar.registerFormatters(conversionService);
+
+        // Register date conversion with a specific global format
+        DateFormatterRegistrar registrar = new DateFormatterRegistrar();
+        registrar.setFormatter(new DateFormatter("yyyyMMdd"));
+        registrar.registerFormatters(conversionService);
+
+        return conversionService;
+    }
+}
+```
+通过XML配置时可以通过`FormattingConversionServiceFactoryBean`实现相同的配置：
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="
+        http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd>
+
+    <bean id="conversionService" class="org.springframework.format.support.FormattingConversionServiceFactoryBean">
+        <property name="registerDefaultFormatters" value="false" />
+        <property name="formatters">
+            <set>
+                <bean class="org.springframework.format.number.NumberFormatAnnotationFormatterFactory" />
+            </set>
+        </property>
+        <property name="formatterRegistrars">
+            <set>
+                <bean class="org.springframework.format.datetime.joda.JodaTimeFormatterRegistrar">
+                    <property name="dateFormatter">
+                        <bean class="org.springframework.format.datetime.joda.DateTimeFormatterFactoryBean">
+                            <property name="pattern" value="yyyyMMdd"/>
+                        </bean>
+                    </property>
+                </bean>
+            </set>
+        </property>
+    </bean>
+</beans>
+```
+
+## 七、Java Bean有效性验证
+### 7.1 Bean有效性验证概述
+有效性验证为Java应用提供了一种通过约束声明和元数据判断有效性的通用方法：通过在领域模型属性上注解声明式有效性约束并在运行时强化。Java提供了一些内置约束，且可自定义相关约束。  
+
+我们以包含两个字段的`PersonForm`类为例：  
+```java
+public class PersonForm {
+    private String name;
+    private int age;
+}
+```
+通过如下方式添加约束可以实现Bean Validation为：  
+```java
+public class PersonForm {
+
+    @NotNull
+    @Size(max=64)
+    private String name;
+
+    @Min(0)
+    private int age;
+}
+```
+根据约束配置，BeanValidation会选择对应验证器验证上述类。
+
+### 7.2 配置BeanValidation供应商
+Spring充分支持BeanValidation API，包括将其供应商作为自身Bean管理并引导。这样我们可以在应用中任意位置注入`javax.validation.ValidatorFactory`或`javax.validation.Validator`。比如我们可以将`LocalValidatorFactoryBean`配置为Spring的默认验证器bean：
+```java
+import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
+
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public LocalValidatorFactoryBean validator() {
+        return new LocalValidatorFactoryBean();
+    }
+}
+```
+上述基本配置会在应用启动引导机制中触发验证器初始化过程。供应商（比如Hibernate的Validator）应位于类路径下并可被自动检测到。
+
+#### 注入验证器
+`LocalValidatorFactoryBean`实现了三个接口：`javax.validation.ValidatorFactory`、`javax.validation.Validator`和Spring的`org.springframework.validation.Validator`，注入时可任意选择其中一个。
+如果偏好直接使用Java Bean Validation API，可注入`javax.validation.Validator`引用：
+```java
+import javax.validation.Validator;
+
+@Service
+public class MyService {
+
+    @Autowired
+    private Validator validator;
+}
+```
+如果偏好使用Spring风格，可以注入`org.springframework.validation.Validator`引用：
+```java
+import org.springframework.validation.Validator;
+
+@Service
+public class MyService {
+
+    @Autowired
+    private Validator validator;
+}
+```
+#### 配置自定义约束
+Bean验证包括两部分：
++ `@Constraint`注解，说明约束及可配置属性
++ `javax.validation.ConstraintValidator`接口的实现，执行约束逻辑
+
+每个`@Constraint`注解关联一个相应的`ConstraintValidator`实现类。在运行时，`ConstraintValidatorFactory`会实例化领域模型上的约束注解的关联实现。`LocalValidatorFactoryBean`默认地会配置一个`SpringConstraintValidatorFactory`，它会通过Spring创建`ConstraintValidator`的实例。这使得自定义的`ConstraintValidator`可以像其他bean一样受益于依赖注入。  
+自定义`@Constraint`声明及关联的`ConstraintValidator`实现(使用了Spring的自动注入功能)如示例：  
+```java
+@Target({ElementType.METHOD, ElementType.FIELD})
+@Retention(RetentionPolicy.RUNTIME)
+@Constraint(validatedBy=MyConstraintValidator.class)
+public @interface MyConstraint {
+}
+
+import javax.validation.ConstraintValidator;
+
+public class MyConstraintValidator implements ConstraintValidator {
+
+    @Autowired;
+    private Foo aDependency;
+
+    // ...
+}
+```
+#### Spring驱动的方法验证
+通过定义`MethodValidationPostProcessor`的bean信息，可以向Spring上下文中添加方法验证特性：  
+```java
+import org.springframework.validation.beanvalidation.MethodValidationPostProcessor;
+
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public MethodValidationPostProcessor validationPostProcessor() {
+        return new MethodValidationPostProcessor();
+    }
+}
+```
+在目标类上添加Spring注解`@Validated`触发Spring驱动的方法验证。  
+
+#### 其他配置项
+默认的`LocalValidatorFactoryBean`配置可以满足大多数场景。同时也可通过一系列配置项来配置Bean Validation，从message interpolation到traversal resolution。查看[LocalValidatorFactoryBean](https://docs.spring.io/spring-framework/docs/5.2.8.RELEASE/javadoc-api/org/springframework/validation/beanvalidation/LocalValidatorFactoryBean.html)了解更多。  
+
+### 7.3 配置DataBinder
+Spring 3开始可以使用`Validator`配置`DataBinder`实例。一旦配置后，就可以通过`binder.validate()`来引用`Validator`，`Errors`会自动添加到`BindingResult`中。  
+
+通过编码式使用`DataBinder`来执行目标对象的验证逻辑示例如下：  
+```java
+Foo target = new Foo();
+DataBinder binder = new DataBinder(target);
+binder.setValidator(new FooValidator());
+
+// bind to the target object
+binder.bind(propertyValues);
+
+// validate the target object
+binder.validate();
+
+// get BindingResult that includes any validation errors
+BindingResult results = binder.getBindingResult();
+```
+通过`dataBinder.addValidators`或`dataBinder.replaceValidators`可为`DataBinder`配置多个`Validator`实例。这种情况适用于在`DataBinder`中结合全局配置的验证及Spring的`Validator`。  
+
+
 
 
 
